--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/tescodb
-spring.datasource.username=root
-spring.datasource.password=root$123
-spring.datasource.platform=mysql
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+server.port=${PORT:0}
+spring.application.name=user-service
+eureka.client.serviceUrl.defaultZone=http://localhost:7777/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
