--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:0}
-spring.application.name=user-service
-eureka.client.serviceUrl.defaultZone=http://localhost:7777/eureka
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+spring.datasource.username=root
+spring.datasource.password=root$123
+spring.datasource.platform=mysql
+spring.jpa.hibernate.ddl-auto=update
